log
Thu 11 May 2023 04:28:05 PM UTC: 
 tests:  0|4
total_score: 0/70
faa5ece
Thu 11 May 2023 04:56:28 PM UTC: 
 heap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
2103f9a
Thu 11 May 2023 05:11:02 PM UTC: 
 heap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  2|2
total_score: 20/70
3775128
Sun 14 May 2023 10:29:47 PM UTC: 
 heap.c | 29 ++++++++++++++++++++++++++++-
 1 file changed, 28 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:50:22: error: ‘pos’ undeclared (first use in this function); did you mean ‘pow’?
   50 |     if(pq->heapArray[pos].priority > pq->heapArray[padre].priority)
      |                      ^~~
      |                      pow
heap.c:50:22: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
b07f550
Sun 14 May 2023 10:29:59 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:52:27: error: ‘pos’ undeclared (first use in this function); did you mean ‘pow’?
   52 |       aux = pq->heapArray[pos];
      |                           ^~~
      |                           pow
heap.c:52:27: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
fadcc68
